fix(deploy): optimize Dockerfile for HF and fix deprecated URL constructor